# cmc

./: Cargo.toml  input.json
src/: entry.rs  main.rs
